# kitchenowl

./: .dockerignore  .gitignore  .gitmodules  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  README.md  analysis_options.yaml  changelog_configuration.json  default.conf.template  docker-compose-postgres.yml  docker-compose-rabbitmq.yml  docker-compose-single.yml  docker-compose.yml  docker-entrypoint-custom.sh  docs-requirements.txt  entrypoint.sh  generate-item-icons.py  index.html  latest  mkdocs.yml  pubspec.yaml  sitemap.xml  versions.json
backend/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  b'.gitignore'  b'CONTRIBUTING.md'  b'Dockerfile'  b'README.md'  b'database.db'  b'docker-compose.yml'  b'entrypoint.sh'  b'manage.py'  b'requirements.txt'  b'wsgi.ini'  b'wsgi.py'  docker-compose-postgres.yml  docker-compose-rabbitmq.yml  docker-compose.yml  entrypoint.sh  manage.py  manage_default_items.py  mcp_server.py  pyproject.toml  requirements.txt  upgrade_default_items.py  wsgi.ini  wsgi.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  register_controller.py
backend/app/controller/: __init__.py  health_controller.py  mcp_controller.py
backend/app/errors/: __init__.py
backend/app/helpers/: __init__.py  admin_required.py  authorize_household.py  db_list_type.py  db_model_authorize_mixin.py  db_model_base.py  db_model_mixin.py  db_model_timestamp_mixin.py  next_weekday.py  server_admin_required.py  socket_jwt_required.py  timestamp_mixin.py  validate_args.py  validate_socket_args.py  validators.py
backend/app/jobs/: __init__.py  clusterShoppings.py  cluster_shoppings.py  itemOrdering.py  itemSuggestions.py  item_ordering.py  item_suggestions.py  jobs.py  recipe_suggestions.py  test_recipeSuggestions.py
backend/app/models/: __init__.py  association.py  category.py  challenge_mail_verify.py  challenge_password_reset.py  expense.py  expense_category.py  file.py  history.py  household.py  inventory.py  item.py  loyalty_card.py  oidc.py  planner.py  push_notification_subscription.py  recipe.py  recipe_history.py  report.py  settings.py  shoppinglist.py  tag.py  token.py  user.py
backend/app/routes/: shopping_lists.py
backend/app/service/: mail.py  (+10 more)
backend/b'app/: __init__.py'  config.py'
backend/b'docs/: _config.yml'
backend/b'templates/: add_items_from_server.py'  attributes.json'  de.json'  en.json'
backend/docs/: index.md
backend/migrations/: add_shopping_list_order.py  env.py
backend/templates/: attributes.json  de.json  en.json  fill_attributes_with_missing_items.py
backend/tests/: __init__.py  test_recipe_suggestions.py
(+1535 files in other folders)
